--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .App {
   text-align: center;
 }
+.slick-container {
+  min-height: 0px;
+  min-width: 0px;
+}
+.test-container {
+  display: flex;
+  width: 100%;
+  height: 200px;
+  background-color: #61dafb;
+}
+
+.Overlay {
+  transition: opacity 0.4s ease-in-out;
+}
 
 .App-logo {
   height: 40vmin;
